--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://makiton.github.io
+title: My notes
+subtitle: メモなど
+author: makiton
 simple_search: https://www.google.com/search
 description:
 
